--- a/DemoDynamicWeb/src/main/webapp/index.html
+++ b/DemoDynamicWeb/src/main/webapp/index.html
@@ -7,8 +7,10 @@
 <body>
 	<h1>Hello World</h1>
 	<p>This is 1st webpage.</p>
-
+<!-- 
 	<form action='add' method="POST">
+	 -->
+	<form action='firstPage.jsp' method="post">
 		<input type="number" name="num1" /> <input type="number" name="num2" />
 		<input type="submit" />
 	</form>
